package strategy.mainWeapons;

public class Take implements MainWeapon {
    @Override
    public void useMain() {
        System.out.println("ぱしゅんぱしゅん");
    }
}
