package strategy.specialWeapons;

public class GreatBarrier implements SpecialWeapon {

    @Override
    public void useSpecial() {
        System.out.println("どぉむっ！　どぅんどぅんどぅん……");
    }

}
