package strategy.specialWeapons;

public class KillerWail5_1 implements SpecialWeapon {

    @Override
    public void useSpecial() {
        System.out.println("どぁん……じゃーんじゃーんじゃーん……");

    }

}
